Change packet movement mechanism